@@ -6,6 +6,8 @@ Thu Oct  4 11:05:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 	method for non-manifold meshes.
 	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (find): Fix for
 	non-manifold meshes.
+	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Fix for
+	non-manifold meshes with HalfEdge adjacency relations.
 
 Wed Oct  3 16:54:03 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
